fix title and subtitle font size on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,6 +60,14 @@ h1, h2, h3, h4, h5, h6, .site-title {
   }
 }
 
+.site-title {
+  font-size: 24px;
+}
+.site-subtitle {
+  font-size: 16px;
+}
+
+
 @media (min-width: 1200px) { 
   .author__avatar-img {
     top: 8rem;
